# HabrRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.chainlit  QUICKSTART.md  README.md  docker-compose.yml  evaluation_100.json  main.py  pyproject.toml  schemas.py  test_dataset.py
db/: answer_cache.sql  db_chainlit.sql
evaluation/: README.md  create_langfuse_dataset.py  evaluate_dataset_run.py  metrics.py  run_dataset.py  structures.py
evaluation/data/: qa_dataset.jsonl  qa_dataset_2.jsonl
notebooks/: GenerateSynthQA.ipynb
reports/: report_1.md  report_2.md  report_3.md
scripts/: load_habr.py
src/: build_sources.py  caching.py  chunking.py  data_loader.py  lifespan.py  logger.py  mlflow_runtime.py  prompts.py  rag_graph.py  retrievers.py  schemas.py  settings.py  summarization.py  synthetic_qa_generator.py  utils.py
src/rag/: graph.py  prompts.py  schemas.py  state.py
src/validation/: data2mlflow.py  get_traces.ipynb  run.py
ui/: chainlit.md  chainlit_app.py
