[project]
name = "habrrag"
version = "0.1.0"
description = "RAG for habr articles"
requires-python = "~=3.11.0"
dependencies = [
    "langchain==0.3.27",
    "langchain-huggingface==0.3.1",
    "langchain-community==0.3.31",
    "langchain-openai==0.3.35",
    "langgraph==0.6.11",
    "fastapi==0.118.3",
    "faiss-cpu==1.12.0",
    "rank_bm25==0.2.2",
    "mlflow==3.4.0",
    "datasets==4.1.1",
    "torch==2.5.1",
    "sentence-transformers==5.0.0",
    "langchain-qdrant>=0.2.1",
    "qdrant-client>=1.15.1",
    "zstandard>=0.23.0",
    "chainlit>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
