[project]
name = "habrrag"
version = "0.1.0"
description = "RAG for habr articles"
requires-python = "~=3.11.0"
dependencies = [
    "langchain==0.3.27",
    "langchain-huggingface==0.3.1",
    "langchain-community==0.3.31",
    "langchain-openai==0.3.35",
    "langchain-mistralai==0.2.12",
    "langgraph==0.6.11",
    "fastapi==0.118.3",
    "faiss-cpu==1.12.0",
    "rank_bm25==0.2.2",
    "mlflow==3.4.0",
    "datasets==4.4.1",
    "torch==2.5.1",
    "sentence-transformers==5.0.0",
    "langchain-qdrant==0.2.1",
    "qdrant-client==1.16.1",
    "zstandard==0.25.0",
    "chainlit==2.9.3",
    "psycopg2-binary==2.9.11",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "jsonlines==4.0.0",
    "langfuse==2.60.10",
    "ragas==0.3.9",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "uvicorn==0.38.0",
]

[project.optional-dependencies]
generatedataset = [
    "langchain-mistralai==0.2.12",
    "mistralai==1.9.11",
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8",
    "jupyterlab==4.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
